# s2p-murmurhash

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
cmake/: sourcesdk.cmake
cmake/platform/: shared.cmake
include/: main.h  murmurhash.h
src/: main.c  murmurhash.cpp
